--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ TODO:
 1) interfaccia RL-glue in pacchetto separato?
 2) interfaccia ROS 
 3) Interfaccia Matlab?
+4) Cambiare nota di copyright: mettere tutti gli autori, e soprattutto metetre politecnico di milano
