--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO:
 
+0) controllare derivate politiche
 1) interfaccia RL-glue in pacchetto separato?
 2) interfaccia ROS 
 3) Interfaccia Matlab?
