--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 TODO:
 
-0a) controllare derivate politiche
+SISTEMARE SETTINGS ENVIRONMENT
+
+0a) controllare derivate politiche (alcune fatte vedi rele_matlab/miscellaneous)
 0d) non capisco come mai eNES con calcolo della matrice di fisher in forma chiusa non funzioni (anche in matlab non funziona)
 0e) aggiungere condizione di termine agli algoritmi
 
