--- a/TODO
+++ b/TODO
@@ -1,8 +1,14 @@
 TODO:
 
-SISTEMARE SETTINGS ENVIRONMENT
+SISTEMARE GLI ENVIRONMENT PER ESSERE PIU' FLESSIBILI
 
-0a) controllare derivate politiche (alcune fatte vedi rele_matlab/miscellaneous)
+MOUNTAIN CAR AGGIUNGERE STATI DI PARTENZA (SUTTON, KLEIN, RANDOM)
+AGGIORNARE REWARD IRL
+DISCUTERE IMPLEMENTAZIONE ALGORITMI BATCH (vedasi LSPI and batch gradients)
+MLE con LASSO
+CPIRL
+
+
 0d) non capisco come mai eNES con calcolo della matrice di fisher in forma chiusa non funzioni (anche in matlab non funziona)
 0e) aggiungere condizione di termine agli algoritmi
 
