--- a/TODO
+++ b/TODO
@@ -2,10 +2,9 @@ TODO:
 
 ### 16 Feb 2016
 DAVE:
-1) Fixare Enac
-2) Testare e implementare i gradienti per IRL
-3) Cleanup interfaccia serializzazione
-4) scegliere una lib per scrivere json
+1) Fix gradienti batch
+2) Cleanup interfaccia serializzazione
+3) scegliere una lib per scrivere json
 
 TEO:
 1) Scegliere stile doc
